--- a/red-curry/index.html
+++ b/red-curry/index.html
@@ -8,6 +8,8 @@
 			<button class="btn btn-default">Get Json</button>
 			<textarea></textarea>
 		</div>
+
+		<div class="alert alert-danger" role="alert"></div>
 		<div class="grid"></div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
