Add counter of moves in HTML

--- a/red-curry/index.html
+++ b/red-curry/index.html
@@ -7,6 +7,7 @@
 		<div class="output-area">
 			<button class="btn btn-default">Get Json</button>
 			<textarea></textarea>
+			<h2 id="total-moves"></h2>
 		</div>
 
 		<div class="alert alert-danger" role="alert"></div>
