--- a/red-curry/index.html
+++ b/red-curry/index.html
@@ -1,23 +1,24 @@
 <html>
-	<head>
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		<link rel="stylesheet" href="./style.css">
-	</head>
-	<body>
-		<div class="output-area">
-			<button class="btn btn-default">Get Json</button>
-			<textarea></textarea>
-			<h2 id="total-moves"></h2>
-		</div>
 
-		<div class="alert alert-danger" role="alert"></div>
-		<div class="grid"></div>
+<head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="./style.css">
+</head>
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="./script.js"></script>
-	</body>
+<body>
+	<div class="output-area">
+		<button class="btn btn-default" id="getjson">Get Json</button>
+		<button class="btn btn-default" id="setjson">Set Json</button>
+		<textarea></textarea>
+		<h2 id="total-moves"></h2>
+	</div>
+
+	<div class="alert alert-danger" role="alert"></div>
+	<div class="grid"></div>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="./script.js"></script>
+</body>
+
 </html>
-
-
-
-
